PlaylistTrack: Add track number, Fix play button display (non mobile devices)

--- a/src/modules/album/components/AlbumTrack/AlbumTrack.module.scss
+++ b/src/modules/album/components/AlbumTrack/AlbumTrack.module.scss
@@ -36,7 +36,7 @@
         @apply sm:pl-2 sm:pr-1;
       }
       &-index {
-        @apply hidden;
+        @apply hidden sm:block;
       }
     }
   }
